<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="154dp"
            android:layout_height="154dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/pick_image"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/editor_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="122dp" />

        <LinearLayout
            android:id="@+id/main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editor_fab"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <TextView
                    style="@style/EditorTextView"
                    android:text="@string/product_name" />

                <TextView
                    style="@style/EditorTextView"
                    android:text="@string/product_price" />

                <TextView
                    style="@style/EditorTextView"
                    android:text="@string/product_quantity" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edit_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_info"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/description"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/description_tv"
            android:inputType="text|textMultiLine|textCapSentences" />
    </RelativeLayout>
</ScrollView>