<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:background="@drawable/border"
                android:src="@drawable/sample_watch" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditorTextView"
                        android:text="@string/product_name" />

                    <TextView
                        style="@style/EditorTextView"
                        android:text="@string/product_price" />

                    <TextView
                        style="@style/EditorTextView"
                        android:text="@string/product_quantity" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textAppearance="?android:textAppearanceMedium"
                        tools:text="Watch" />

                    <TextView
                        android:id="@+id/detail_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textAppearance="?android:textAppearanceMedium"
                        tools:text="20$" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <Button
                            android:id="@+id/minus"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginRight="8dp"
                            android:text="-" />

                        <TextView
                            android:id="@+id/detail_quantity"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:gravity="center_horizontal"
                            android:singleLine="true"
                            android:textAlignment="center"
                            android:textAppearance="?android:textAppearanceMedium"
                            tools:text="50" />

                        <Button
                            android:id="@+id/plus"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginRight="8dp"
                            android:text="+" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/description"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="italic"
                tools:text="Watch your time" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark">

                <Button
                    android:id="@+id/order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="false"
                    android:text="@string/order" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>